Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AActor.h

	DOTNET_EXPORT auto E_AActor_ReceiveBeginPlay(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->ReceiveBeginPlay_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveDestroyed(AActor* Self)
	{
		Self->ReceiveDestroyed();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveHit(AActor* Self, UPrimitiveComponent* MyComp, AActor* Other, UPrimitiveComponent* OtherComp, bool bSelfMoved, INT_PTR HitLocation, INT_PTR HitNormal, INT_PTR NormalImpulse, INT_PTR Hit)
	{
		auto _p0 = MyComp;
		auto _p1 = Other;
		auto _p2 = OtherComp;
		auto _p3 = bSelfMoved;
		auto _p4 = *(FVector*)HitLocation;
		auto _p5 = *(FVector*)HitNormal;
		auto _p6 = *(FVector*)NormalImpulse;
		auto& _p7 = *(FHitResult*)Hit;
		Self->ReceiveHit(_p0, _p1, _p2, _p3, _p4, _p5, _p6, _p7);
	}
	DOTNET_EXPORT auto E_AActor_ReceiveTick(AActor* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->ReceiveTick(_p0);
	}
	DOTNET_EXPORT auto E_AActor_RegisterActorTickFunctions(AActor* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		((E_PROTECTED_WRAP_AActor*)Self)->RegisterActorTickFunctions_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_AActor_RegisterAllActorTickFunctions(AActor* Self, bool bRegister, bool bDoComponents)
	{
		auto _p0 = bRegister;
		auto _p1 = bDoComponents;
		Self->RegisterAllActorTickFunctions(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_RegisterAllComponents(AActor* Self)
	{
		Self->RegisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_RemoveInstanceComponent(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->RemoveInstanceComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_RemoveOwnedComponent(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->RemoveOwnedComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_RemoveTickPrerequisiteActor(AActor* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_AActor_RemoveTickPrerequisiteComponent(AActor* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_ReregisterAllComponents(AActor* Self)
	{
		Self->ReregisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_RerunConstructionScripts(AActor* Self)
	{
		Self->RerunConstructionScripts();
	}
	DOTNET_EXPORT auto E_AActor_Reset(AActor* Self)
	{
		Self->Reset();
	}
	DOTNET_EXPORT auto E_AActor_ResetOwnedComponents(AActor* Self)
	{
		Self->ResetOwnedComponents();
	}
	DOTNET_EXPORT auto E_AActor_ResetPropertiesForConstruction(AActor* Self)
	{
		Self->ResetPropertiesForConstruction();
	}
	DOTNET_EXPORT auto E_AActor_RewindForReplay(AActor* Self)
	{
		Self->RewindForReplay();
	}
	DOTNET_EXPORT auto E_AActor_SetActorEnableCollision(AActor* Self, bool bNewActorEnableCollision)
	{
		auto _p0 = bNewActorEnableCollision;
		Self->SetActorEnableCollision(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorHiddenInGame(AActor* Self, bool bNewHidden)
	{
		auto _p0 = bNewHidden;
		Self->SetActorHiddenInGame(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorLocation(AActor* Self, INT_PTR NewLocation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto& _p0 = *(FVector*)NewLocation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		return Self->SetActorLocation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_SetActorLocationAndRotation(AActor* Self, INT_PTR NewLocation, INT_PTR NewRotation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)NewLocation;
		auto _p1 = *(FRotator*)NewRotation;
		auto _p2 = bSweep;
		auto _p3 = (FHitResult*)OutSweepHitResult;
		auto _p4 = Teleport;
		return Self->SetActorLocationAndRotation(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_AActor_SetActorLocationAndRotation_o1(AActor* Self, INT_PTR NewLocation, INT_PTR NewRotation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)NewLocation;
		auto& _p1 = *(FQuat*)NewRotation;
		auto _p2 = bSweep;
		auto _p3 = (FHitResult*)OutSweepHitResult;
		auto _p4 = Teleport;
		return Self->SetActorLocationAndRotation(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_AActor_SetActorRelativeLocation(AActor* Self, INT_PTR NewRelativeLocation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)NewRelativeLocation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->SetActorRelativeLocation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_SetActorRelativeRotation(AActor* Self, INT_PTR NewRelativeRotation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto _p0 = *(FRotator*)NewRelativeRotation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->SetActorRelativeRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_SetActorRelativeRotation_o1(AActor* Self, INT_PTR NewRelativeRotation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto& _p0 = *(FQuat*)NewRelativeRotation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->SetActorRelativeRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_SetActorRelativeScale3D(AActor* Self, INT_PTR NewRelativeScale)
	{
		auto _p0 = *(FVector*)NewRelativeScale;
		Self->SetActorRelativeScale3D(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorRelativeTransform(AActor* Self, INT_PTR NewRelativeTransform, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto& _p0 = *(FTransform*)NewRelativeTransform;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->SetActorRelativeTransform(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_SetActorRotation(AActor* Self, INT_PTR NewRotation, ETeleportType Teleport)
	{
		auto _p0 = *(FRotator*)NewRotation;
		auto _p1 = Teleport;
		return Self->SetActorRotation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_SetActorRotation_o1(AActor* Self, INT_PTR NewRotation, ETeleportType Teleport)
	{
		auto& _p0 = *(FQuat*)NewRotation;
		auto _p1 = Teleport;
		return Self->SetActorRotation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_SetActorScale3D(AActor* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetActorScale3D(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorTickEnabled(AActor* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetActorTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorTickInterval(AActor* Self, float TickInterval)
	{
		auto _p0 = TickInterval;
		Self->SetActorTickInterval(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetActorTransform(AActor* Self, INT_PTR NewTransform, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto& _p0 = *(FTransform*)NewTransform;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		return Self->SetActorTransform(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_SetAutonomousProxy(AActor* Self, bool bInAutonomousProxy, bool bAllowForcePropertyCompare)
	{
		auto _p0 = bInAutonomousProxy;
		auto _p1 = bAllowForcePropertyCompare;
		Self->SetAutonomousProxy(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_SetLifeSpan(AActor* Self, float InLifespan)
	{
		auto _p0 = InLifespan;
		Self->SetLifeSpan(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetLODParent(AActor* Self, UPrimitiveComponent* InLODParent, float InParentDrawDistance)
	{
		auto _p0 = InLODParent;
		auto _p1 = InParentDrawDistance;
		Self->SetLODParent(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_SetNetDormancy(AActor* Self, ENetDormancy NewDormancy)
	{
		auto _p0 = NewDormancy;
		Self->SetNetDormancy(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetNetDriverName(AActor* Self, char* NewNetDriverName)
	{
		auto _p0 = ConvertFromManage_FName(NewNetDriverName);
		Self->SetNetDriverName(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetNetUpdateTime(AActor* Self, float NewUpdateTime)
	{
		auto _p0 = NewUpdateTime;
		Self->SetNetUpdateTime(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetOwner(AActor* Self, AActor* NewOwner)
	{
		auto _p0 = NewOwner;
		Self->SetOwner(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetRemoteRoleForBackwardsCompat(AActor* Self, ENetRole InRemoteRole)
	{
		auto _p0 = InRemoteRole;
		((E_PROTECTED_WRAP_AActor*)Self)->SetRemoteRoleForBackwardsCompat_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetReplicateMovement(AActor* Self, bool bInReplicateMovement)
	{
		auto _p0 = bInReplicateMovement;
		Self->SetReplicateMovement(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetReplicates(AActor* Self, bool bInReplicates)
	{
		auto _p0 = bInReplicates;
		Self->SetReplicates(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetRootComponent(AActor* Self, USceneComponent* NewRootComponent)
	{
		auto _p0 = NewRootComponent;
		return Self->SetRootComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetTickableWhenPaused(AActor* Self, bool bTickableWhenPaused)
	{
		auto _p0 = bTickableWhenPaused;
		Self->SetTickableWhenPaused(_p0);
	}
	DOTNET_EXPORT auto E_AActor_SetTickGroup(AActor* Self, ETickingGroup NewTickGroup)
	{
		auto _p0 = NewTickGroup;
		Self->SetTickGroup(_p0);
	}
	DOTNET_EXPORT auto E_AActor_ShouldTickIfViewportsOnly(AActor* Self)
	{
		return Self->ShouldTickIfViewportsOnly();
	}
	DOTNET_EXPORT auto E_AActor_SnapRootComponentTo(AActor* Self, AActor* InParentActor, char* InSocketName)
	{
		auto _p0 = InParentActor;
		auto _p1 = ConvertFromManage_FName(InSocketName);
		Self->SnapRootComponentTo(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_SwapRoles(AActor* Self)
	{
		Self->SwapRoles();
	}
	DOTNET_EXPORT auto E_AActor_SwapRolesForReplay(AActor* Self)
	{
		Self->SwapRolesForReplay();
	}
	DOTNET_EXPORT auto E_AActor_SyncReplicatedPhysicsSimulation(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->SyncReplicatedPhysicsSimulation_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_TakeDamage(AActor* Self, float DamageAmount, INT_PTR DamageEvent, AController* EventInstigator, AActor* DamageCauser)
	{
		auto _p0 = DamageAmount;
		auto& _p1 = *(FDamageEvent*)DamageEvent;
		auto _p2 = EventInstigator;
		auto _p3 = DamageCauser;
		return Self->TakeDamage(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_TearOff(AActor* Self)
	{
		Self->TearOff();
	}
	DOTNET_EXPORT auto E_AActor_TeleportSucceeded(AActor* Self, bool bIsATest)
	{
		auto _p0 = bIsATest;
		Self->TeleportSucceeded(_p0);
	}
	DOTNET_EXPORT auto E_AActor_TeleportTo(AActor* Self, INT_PTR DestLocation, INT_PTR DestRotation, bool bIsATest, bool bNoCheck)
	{
		auto& _p0 = *(FVector*)DestLocation;
		auto& _p1 = *(FRotator*)DestRotation;
		auto _p2 = bIsATest;
		auto _p3 = bNoCheck;
		return Self->TeleportTo(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_Tick(AActor* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->Tick(_p0);
	}
	DOTNET_EXPORT auto E_AActor_TickActor(AActor* Self, float DeltaTime, ELevelTick TickType, INT_PTR ThisTickFunction)
	{
		auto _p0 = DeltaTime;
		auto _p1 = TickType;
		auto& _p2 = *(FActorTickFunction*)ThisTickFunction;
		Self->TickActor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_TornOff(AActor* Self)
	{
		Self->TornOff();
	}
	DOTNET_EXPORT auto E_AActor_UninitializeComponents(AActor* Self)
	{
		Self->UninitializeComponents();
	}
	DOTNET_EXPORT auto E_AActor_UnregisterAllComponents(AActor* Self, bool bForReregister)
	{
		auto _p0 = bForReregister;
		Self->UnregisterAllComponents(_p0);
	}